--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
+        with:
+          submodules: recursive
+        
       # - name: Setup dotnet
       #   uses: actions/setup-dotnet@v1
       #   with:
