--- a/CathodeLib/CathodeLib.csproj
+++ b/CathodeLib/CathodeLib.csproj
@@ -9,9 +9,11 @@
     <PackageId>CathodeLib</PackageId>
     <Authors>Matt Filer</Authors>
     <Description>Provides support for parsing and writing common Alien: Isolation formats from the Cathode engine.</Description>
-    <Copyright>Matt Filer 2020</Copyright>
+    <Copyright>Matt Filer 2021</Copyright>
     <Version>0.1.2</Version>
     <OutputType>Library</OutputType>
+    <AssemblyVersion>0.2.0.0</AssemblyVersion>
+    <FileVersion>0.2.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
