Imported updated composite lookup / new ShortGuidUtils

--- a/CathodeLib/CathodeLib.csproj
+++ b/CathodeLib/CathodeLib.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <None Remove="Resources\NodeDBs\cathode_id_map.bin" />
     <None Remove="Resources\NodeDBs\cathode_id_map_DUMP_ONLY.bin" />
+    <None Remove="Resources\NodeDBs\composite_entity_names.bin" />
     <None Remove="Resources\NodeDBs\node_friendly_names.bin" />
   </ItemGroup>
 
@@ -36,6 +37,10 @@
     <Compile Include="..\AlienBML\AlienBML\AlienBML.cs" Link="Scripts\File Handlers\BML\AlienBML.cs" />
     <Compile Include="..\AlienBML\AlienBML\BML.cs" Link="Scripts\File Handlers\BML\BML.cs" />
     <Compile Include="..\AlienBML\AlienBML\BMLString.cs" Link="Scripts\File Handlers\BML\BMLString.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\NodeDBs\composite_entity_names.bin" />
   </ItemGroup>
 
   <ItemGroup>
