--- a/CathodeLib/CathodeLib.csproj
+++ b/CathodeLib/CathodeLib.csproj
@@ -28,10 +28,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\NodeDBs\cathode_enum_lut.bin" />
+    <None Remove="Resources\NodeDBs\cathode_generic_lut.bin" />
     <None Remove="Resources\NodeDBs\cathode_id_map.bin" />
     <None Remove="Resources\NodeDBs\cathode_id_map_DUMP_ONLY.bin" />
     <None Remove="Resources\NodeDBs\composite_entity_names.bin" />
     <None Remove="Resources\NodeDBs\composite_paths.bin" />
+    <None Remove="Resources\NodeDBs\entity_parameter_names.bin" />
     <None Remove="Resources\NodeDBs\node_friendly_names.bin" />
   </ItemGroup>
 
@@ -42,8 +45,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\NodeDBs\cathode_enum_lut.bin" />
     <EmbeddedResource Include="Resources\NodeDBs\composite_entity_names.bin" />
     <EmbeddedResource Include="Resources\NodeDBs\composite_paths.bin" />
+    <EmbeddedResource Include="Resources\NodeDBs\entity_parameter_names.bin" />
   </ItemGroup>
 
   <ItemGroup>
