--- a/CathodeLib/CathodeLib.csproj
+++ b/CathodeLib/CathodeLib.csproj
@@ -43,13 +43,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Resources\NodeDBs\cathode_generic_lut.bin" />
-    <None Remove="Resources\NodeDBs\cathode_id_map.bin" />
-    <None Remove="Resources\NodeDBs\cathode_id_map_DUMP_ONLY.bin" />
-    <None Remove="Resources\NodeDBs\node_friendly_names.bin" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Include="..\AlienBML\BML.cs" Link="Scripts\CATHODE\BML.cs" />
   </ItemGroup>
 
@@ -80,6 +73,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Scripts\CATHODE\Helpers\" />
   </ItemGroup>
 
 </Project>
